# CreditWise

./: .gitignore  pyproject.toml
notebooks/: 02_preprocessing.ipynb  03_modeling.ipynb  04_evaluation.ipynb
src/: data_processing.py  feature_engineering.py  model_evaluation.py  model_training.py
