[project]
name = "creditwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-wtf>=1.2.2",
    "imbalanced-learn>=0.13.0",
    "joblib>=1.5.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
]
