[project]
name = "creditwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "catboost>=1.2.0",
    "flask>=2.3.0,<3.0.0",
    "flask-wtf>=1.1.0,<2.0.0",
    "imbalanced-learn>=0.10.0,<0.12.0",
    "joblib>=1.3.0,<2.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "matplotlib>=3.5.0,<3.8.0",
    "numpy>=1.21.0,<1.25.0",
    "optuna>=3.0.0,<4.0.0",
    "pandas>=1.5.0,<2.1.0",
    "plotly>=5.0.0,<6.0.0",
    "scikit-learn>=1.1.0,<1.4.0",
    "seaborn>=0.11.0,<0.13.0",
    "shap>=0.41.0,<0.42.0",
    "wtforms>=3.0.0,<4.0.0",
    "xgboost>=1.6.0,<2.0.0",
]

[dependency-groups]
dev = [
    "black>=22.0.0,<24.0.0",
    "ipykernel>=6.0.0,<7.0.0",
    "isort>=5.0.0,<6.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "pytest>=7.0.0,<8.0.0",
]
